Changed font and copy

--- a/infographic.html
+++ b/infographic.html
@@ -75,10 +75,10 @@
         }
 
         .stat-card {
-            background-color: white;
+            background-color: #f8fafc;
             border: 1px solid #e2e8f0;
             border-radius: 8px;
-            padding: 16px;
+            padding: 12px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -90,6 +90,7 @@
             color: #065F96;
             display: flex;
             align-items: center;
+            line-height: 1.2;
         }
 
         .stat-card .icon {
@@ -98,17 +99,17 @@
         }
 
         .stat-number {
-            font-size: 36pt;
+            font-size: 38pt;
             font-weight: 900;
             color: #065F96;
             line-height: 1.1;
-            margin-top: 8px;
+            margin-top: 4px;
         }
 
         .stat-description {
             font-size: 10pt;
             color: #475569;
-            margin-top: 8px;
+            margin-top: 4px;
             flex-grow: 1;
         }
 
@@ -116,7 +117,7 @@
             font-size: 7pt;
             font-style: italic;
             color: #64748b;
-            margin-top: 12px;
+            margin-top: 4px;
         }
 
         .full-width-stat {
@@ -136,6 +137,7 @@
             justify-content: center;
             font-size: 12pt;
             color: #051B4D;
+            line-height: 1.2;
         }
 
         footer {
@@ -154,7 +156,7 @@
     <div class="page-container pagedjs_page">
         <header class="header">
             <h1>Modern Amenities and Renter Satisfaction</h1>
-            <p>Unattended retail is transforming multifamily living. See the numbers behind the trend.</p>
+            <p>Unattended retail is transforming multifamily living.<br>See the numbers behind the trend.</p>
         </header>
 
         <div class="content">
@@ -166,23 +168,23 @@
             </div>
             <div class="grid-container">
                 <div class="stat-card">
-                    <h2>Serve the Work-From-Home Majority</h2>
+                    <h2>Serve Those Working From Home</h2>
                     <p class="stat-number">52%</p>
-                    <p class="stat-description">Of renters work from home, creating a 24/7 on-site customer base.</p>
+                    <p class="stat-description">Many Renters work from home, creating a 24/7 on-site customer base.</p>
                     <p class="stat-source">Source: 2024 NMHC</p>
                 </div>
 
                 <div class="stat-card">
                     <h2>Deliver On-Demand Convenience</h2>
                     <p class="stat-number">66%</p>
-                    <p class="stat-description">(2 of 3) of consumers *prefer* self-service kiosks over staffed checkouts.</p>
+                    <p class="stat-description">Consumers prefer self-service kiosks over staffed checkouts.</p>
                     <p class="stat-source">Source: PYMNTS.com</p>
                 </div>
                 
                 <div class="stat-card">
-                    <h2>Drive Ancillary Revenue</h2>
+                    <h2>Improve Rental Revenue</h2>
                     <p class="stat-number">$45/mo</p>
-                    <p class="stat-description">Millennial renters are willing to pay up to **$45 extra per month** for a self-pay market.</p>
+                    <p class="stat-description">Millennial renters are willing to pay up to $45 extra per month for a self-pay market.</p>
                     <p class="stat-source">Source: Evans Co.</p>
                 </div>
 
