Changed font size

--- a/infographic.html
+++ b/infographic.html
@@ -71,7 +71,7 @@
         .grid-container {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 16px;
+            gap: 12px;
         }
 
         .stat-card {
@@ -103,14 +103,15 @@
             font-weight: 900;
             color: #065F96;
             line-height: 1.1;
-            margin-top: 4px;
+            margin-top: 2px;
         }
 
         .stat-description {
-            font-size: 10pt;
+            font-size: 11pt;
             color: #475569;
-            margin-top: 4px;
+            margin-top: 2px;
             flex-grow: 1;
+            line-height: 1.2;
         }
 
         .stat-source {
