--- a/infographic.html
+++ b/infographic.html
@@ -164,36 +164,36 @@
             <div class="stat-card full-width-stat">
                 <h2>Boost Resident Retention</h2>
                 <p class="stat-number">97%</p>
-                <p class="stat-description">Renters stay longer when their property offered "improved services and a modern tech experience."</p>
-                <p class="stat-source">Source: RealPage</p>
+                <p class="stat-description">of renters say convenient, tech-enabled property management<br>would make them more likely to renew their lease.</p>
+                <p class="stat-source">Source: RealPage, 2024 National Multifamily Renter Study</p>
             </div>
             <div class="grid-container">
                 <div class="stat-card">
                     <h2>Serve Those Working From Home</h2>
                     <p class="stat-number">52%</p>
-                    <p class="stat-description">Many Renters work from home, creating a 24/7 on-site customer base.</p>
-                    <p class="stat-source">Source: 2024 NMHC</p>
+                    <p class="stat-description">of renters work remotely, creating a constantly present customer base.</p>
+                    <p class="stat-source">Source: NMHC/Grace Hill, 2024 Renter Preferences Survey</p>
                 </div>
 
                 <div class="stat-card">
                     <h2>Deliver On-Demand Convenience</h2>
                     <p class="stat-number">66%</p>
-                    <p class="stat-description">Consumers prefer self-service kiosks over staffed checkouts.</p>
-                    <p class="stat-source">Source: PYMNTS.com</p>
+                    <p class="stat-description">of consumers prefer self-service kiosks over staffed checkouts.</p>
+                    <p class="stat-source">Source: PYMNTS Intelligence, 2024/2025</p>
                 </div>
                 
                 <div class="stat-card">
                     <h2>Improve Rental Revenue</h2>
-                    <p class="stat-number">$45/mo</p>
-                    <p class="stat-description">Millennial renters are willing to pay up to $45 extra per month for a self-pay market.</p>
-                    <p class="stat-source">Source: Evans Co.</p>
+                    <p class="stat-number">65%</p>
+                    <p class="stat-description">of renters are willing to pay a monthly premium for smart amenities.</p>
+                    <p class="stat-source">Source: Rently Smart Apartment Trends Report, 2025</p>
                 </div>
 
                 <div class="stat-card">
                     <h2>Serve a Proven Market</h2>
                     <p class="stat-number">$31B+</p>
                     <p class="stat-description">The U.S. unattended retail market is a massive, established industry.</p>
-                    <p class="stat-source">Source: PYMNTS.com</p>
+                    <p class="stat-source">Source: PYMNTS, 2024</p>
                 </div>
             </div>
         </div>
